--- a/website/site-static/sass/site/_variables.sass
+++ b/website/site-static/sass/site/_variables.sass
@@ -122,9 +122,13 @@ $successTextAlt: #6633CC !default
 $successBackgroundAlt: #f3f0fb !default
 $successBorderAlt: darken(adjust-hue($successBackgroundAlt, -10), 5%) !default
 
-$infoText: #7a7a7a !default
-$infoBackground: #FFFCDE !default
-$infoBorder: darken(adjust-hue($infoBackground, -10), 7%) !default
+$infoText: #0B0 !default
+$infoBackground: #DDFFD9 !default
+$infoBorder: darken(adjust-hue($successBackground, -10), 5%) !default
+
+//$infoText: #7a7a7a !default
+//$infoBackground: #FFFCDE !default
+//$infoBorder: darken(adjust-hue($infoBackground, -10), 7%) !default
 
 // GRID
 // --------------------------------------------------
