--- a/website/apps/invitation/templates/invitation/invitation_form.html
+++ b/website/apps/invitation/templates/invitation/invitation_form.html
@@ -1,5 +1,12 @@
-<form method="post">
-	{% csrf_token %}
-{{ form }}
-<input type="submit" value="submit">!
-</form>
+{% extends "invitation/base.html" %}
+{% load i18n %}
+{% block content %}
+
+  <form method='post' class="form-horizontal" action=''>{% csrf_token %}
+    {% include 'invitation/form_fields.html' %}
+
+    <input type="submit" class="btn" value="{% trans "Send invitation email" %}" />
+  </form>
+
+
+{% endblock %}
