--- a/website/apps/registration/templates/registration/registration_form.html
+++ b/website/apps/registration/templates/registration/registration_form.html
@@ -1,10 +1,11 @@
 {% extends "registration/registration_base.html" %}
+{% load i18n %}
 {% block title %}Register for an account{% endblock %}
 {% block content %}
   {% include 'registration/form_errors.html' %}
   <form method='post' class="form-horizontal" action=''>{% csrf_token %}
     {% include 'registration/form_fields.html' %}
 
-    <input type="submit" class="btn" value="Send activation email" />
+    <input type="submit" class="btn" value="{% trans "Register" %}" />
   </form>
 {% endblock %}
