--- a/website/site-static/css/screen.css
+++ b/website/site-static/css/screen.css
@@ -8290,16 +8290,16 @@ form.form-horizontal fieldset div.notes-inline p {
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003330}}
 form.form-horizontal fieldset div.notes-inline.notes-info {
-  background-color: #fffcde;
-  color: #7a7a7a;
+  background-color: #ddffd9;
+  color: #00bb00;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003333}}
 form.form-horizontal fieldset div.notes-inline.notes-info h1, form.form-horizontal fieldset div.notes-inline.notes-info h2, form.form-horizontal fieldset div.notes-inline.notes-info h3 {
-  color: #7a7a7a;
+  color: #00bb00;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003335}}
 form.form-horizontal fieldset div.notes-inline.notes-info p {
-  color: #7a7a7a;
+  color: #00bb00;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/asite\/_forms_extra\.sass}line{font-family:\00003338}}
 form.form-horizontal fieldset div.notes-inline.notes-warning {
@@ -11589,14 +11589,14 @@ form.form-horizontal .form-actions input, form.form-horizontal .form-actions but
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/bootstrap\/_alerts\.sass}line{font-family:\0000346}}
 .alert-info {
-  background-color: #fffcde;
-  border-color: #ffedba;
+  background-color: #ddffd9;
+  border-color: #d1ffc0;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/bootstrap\/_alerts\.sass}line{font-family:\0000350}}
 .alert-info,
 .alert-info .alert-heading {
-  color: #7a7a7a;
+  color: #00bb00;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/bootstrap\/_alerts\.sass}line{font-family:\0000356}}
@@ -12943,12 +12943,12 @@ a.thumbnail:hover {
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/bootstrap\/_labels\.sass}line{font-family:\0000338}}
 .label-info {
-  background-color: #7a7a7a;
+  background-color: #00bb00;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/bootstrap\/_labels\.sass}line{font-family:\0000341}}
 .label-info:hover {
-  background-color: #616161;
+  background-color: #008800;
 }
 
 @-webkit-keyframes progress-bar-stripes {
@@ -13387,8 +13387,8 @@ section.importer-importfiles .listing .item.init .icon-blank:before {
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_importer\.sass}line{font-family:\0000370}}
 section.importer-importfiles .listing .item.info {
-  background-color: #fffcde;
-  color: #7a7a7a;
+  background-color: #ddffd9;
+  color: #00bb00;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_importer\.sass}line{font-family:\0000375}}
 section.importer-importfiles .listing .item.warning h3 {
