--- a/website/apps/aplayer/templates/aplayer/_common_script.html
+++ b/website/apps/aplayer/templates/aplayer/_common_script.html
@@ -40,7 +40,7 @@
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/base.ui.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/util.base.js"></script>{% endaddtoblock %}
 	
-	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/aplayer.base.js"></script>{% endaddtoblock %}
-	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/aplayer.ui.js"></script>{% endaddtoblock %}
+	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}aplayer/js/base.js"></script>{% endaddtoblock %}
+	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}aplayer/js/ui.js"></script>{% endaddtoblock %}
 	
 	
