--- a/website/apps/registration/templates/registration/registration_form.html
+++ b/website/apps/registration/templates/registration/registration_form.html
@@ -8,4 +8,13 @@
 
     <input type="submit" class="btn" value="{% trans "Register" %}" />
   </form>
+  
+  
+  
+	{% include "registration/_social_auth.html" %}
+  
+  
+  
+  
+  
 {% endblock %}
