--- a/website/apps/registration/templates/registration/login.html
+++ b/website/apps/registration/templates/registration/login.html
@@ -1,6 +1,9 @@
 {% extends "registration/registration_base.html" %}
 {% block title %}Login{% endblock %}
 {% block content %}
+
+
+
   {% include 'registration/form_errors.html' %}
   <form method="post" class="form-horizontal" action="{% url django.contrib.auth.views.login %}">{% csrf_token %}
     {% include 'registration/form_fields.html' %}
@@ -9,4 +12,8 @@
     <input type="submit" class="btn" value="Login" />
     <input type="hidden" name="next" value="{{ next }}" />
   </form>
+  
+  {% include "registration/_social_auth.html" %}
+  
+  
 {% endblock %}
