--- a/website/site-static/sass/element/_toolbar.sass
+++ b/website/site-static/sass/element/_toolbar.sass
@@ -119,6 +119,8 @@ div.navbar .container
 
 .subnav
   padding: 8px 0px 0px 112px
+  //position: fixed
+  //top: 35px
   li
     list-style: none
     float: left
