--- a/website/templates/base/_common_script.html
+++ b/website/templates/base/_common_script.html
@@ -104,8 +104,8 @@
 	
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/edit.js"></script>{% endaddtoblock %}
 	
-	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/aplayer.base.js"></script>{% endaddtoblock %}
-	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/aplayer.ui.js"></script>{% endaddtoblock %}
+	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}aplayer/js/base.js"></script>{% endaddtoblock %}
+	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}aplayer/js/ui.js"></script>{% endaddtoblock %}
 	
 	<!-- alibrary apps -->
 	
