--- a/website/templates/refactoring.html
+++ b/website/templates/refactoring.html
@@ -185,6 +185,9 @@
 				nj = nunjucks_register_filters(nj);
 				
 				
+				
+				debug.setLevel(0);
+				
 				pusher = new PusherApp;
 				pusher.socket_url = '{% value_from_settings "SOCKETIO_URL" %}';
 				pusher.init();
