--- a/website/apps/abcast/templates/abcast/schedule.html
+++ b/website/apps/abcast/templates/abcast/schedule.html
@@ -35,6 +35,11 @@ $(function () {
 	scheduler.app.range = [{% for date in days %}'{{ date|date:"Y-m-d" }}',{% endfor %}]
 	
 	scheduler.app.api_url = "{% url api_dispatch_list resource_name='abcast/emission' api_name='v1'%}";
+	
+	scheduler.app.pph = '{{ pph }}';
+	scheduler.app.ppd = '{{ ppd }}';
+	scheduler.app.num_days = '{{ num_days }}';
+	
 	scheduler.app.init();
 	
 	scheduler.app.set_selection('playlist', '{{ selected_playlist.get_api_url }}');
@@ -44,6 +49,25 @@ $(function () {
 });
 
 </script>
+{% endaddtoblock %}
+
+
+{% addtoblock "css" %}
+<!-- override styles depending on range etc. -->
+<style>
+	.wk-daynames th {
+		width: {{ ppd }}px;
+	}
+	.tg-gutter {
+		width: {{ ppd }}px;
+	}
+	.emission {
+		width: {{ ppd|add:1 }}px !important;
+	}
+	.ui-draggable-dragging {
+		width: {{ ppd }}px !important;
+	}
+</style>
 {% endaddtoblock %}
 
 
