--- a/website/site-static/css/aplayer.css
+++ b/website/site-static/css/aplayer.css
@@ -14762,6 +14762,44 @@ div.shortcutter div.item.hover .col-left i {
   color: #00bb00;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_on_air\.sass}line{font-family:\000031}}
+.on-air-container {
+  padding: 5px 0;
+  background: #fafafa;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_on_air\.sass}line{font-family:\000034}}
+.on-air-container .emission {
+  padding: 0 5px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_on_air\.sass}line{font-family:\000037}}
+.on-air-container .emission .name {
+  text-transform: uppercase;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_on_air\.sass}line{font-family:\000039}}
+.on-air-container .emission small {
+  font-size: 80%;
+  color: #a5a5a5;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_on_air\.sass}line{font-family:\0000313}}
+.on-air-container .items > div {
+  padding: 0;
+  height: 54px;
+  overflow: hidden;
+  margin-bottom: 4px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_on_air\.sass}line{font-family:\0000319}}
+.on-air-container .items > div span.playing {
+  display: none;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_on_air\.sass}line{font-family:\0000322}}
+.on-air-container .items > div.playing {
+  background: #ddffd9;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_on_air\.sass}line{font-family:\0000324}}
+.on-air-container .items > div.playing span.playing {
+  display: inline;
+}
+
 /* qTip2 - Pretty powerful tooltips - v2.0.1-4-g
  * http://qtip2.com
  *
