--- a/website/site-static/sass/apps/_base.sass
+++ b/website/site-static/sass/apps/_base.sass
@@ -3,5 +3,6 @@
 @import apps/comment
 @import apps/notification
 @import apps/shortcutter
+@import apps/on_air
 // @import apps/scheduler // stand-alone file a.t.m.
 
