--- a/website/templates/refactoring.html
+++ b/website/templates/refactoring.html
@@ -186,7 +186,7 @@
 				
 				
 				
-				debug.setLevel(0);
+				// debug.setLevel(0);
 				
 				pusher = new PusherApp;
 				pusher.socket_url = '{% value_from_settings "SOCKETIO_URL" %}';
