--- a/website/apps/alibrary/templates/alibrary/playlist/sidebar/context/_detail.html
+++ b/website/apps/alibrary/templates/alibrary/playlist/sidebar/context/_detail.html
@@ -24,7 +24,7 @@
 			
 			<!-- Menu element / Action -->
 			{# if perms.alibrary.change_release #}
-			{% if user.is_authenticated %}
+			{% if user.is_authenticated and user == object.user %}
 			<li class="link ">
 				<span class="left icon"><a href="{{ object.get_edit_url }}" title="{% trans "Edit" %}">{% trans "Edit" %}</a></span>
 				<span class="opt"></span>
@@ -34,6 +34,17 @@
 			
 
 			{% if user.is_authenticated %}
+
+
+			{% if object.type == "broadcast"  %}
+			<li class="action selection_single convert_playlist">
+				<span class="left icon"><a href="{% url abcast-schedule-select-playlist  %}?playlist_id={{ object.pk }}&next={% url abcast-schedule %}" title="{% trans "Schedule for Broadcast" %}">{% trans "Schedule for Broadcast" %}</a> </span>
+				<span class="opt"></span>
+				<span class="clear"></span>
+			</li>
+			{% endif %}
+
+
 			<li class="action">
 				<span class="left icon">
 					
@@ -49,6 +60,10 @@
 				<span class="opt"></span>
 				<span class="clear"></span>
 			</li>
+			
+
+			
+			
 			{% endif %}
 			
 			<!-- Menu element / Action -->
